# CodinGame

./: .gitignore  CMakeLists.txt  README.md
blackjack/: main.py
blunder/: CMakeLists.txt  blunder.cpp
blunder22/: CMakeLists.txt  main.cpp
breakthrough/: .projectile  CMakeLists.txt  agent.cpp  agent.h  breakthrough.cpp  breakthrough.h  debug.cpp  eval.cpp  eval.h  main.cpp  types.h
breakthrough/data/: passed_pawns.txt
breakthrough/scripts/: bundler  files.txt  updater
citylights2/: main.py
cmake/: Catch2.cmake  imgui-glfw-glad-glm.cmake
codevszombies/: cvz.cpp  rules.org
cyborgUprising/: .projectile  CMakeLists.txt  actions.cpp  actions.h  game.cpp  game.h  main.cpp  search.cpp  search.h
dontpanic/: CMakeLists.txt  agent.cpp  agent.h  bundled.cpp  dp.cpp  dp.h  main.cpp  mgr.cpp  mgr.h  mgr_main.cpp  types.h  viewer.cpp  viewutils.h
dontpanic/data/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
dontpanic/view/: CMakeLists.txt  dpview.cpp  dpview.h  dpviewbad.cpp  tmview.h
escape_the_cat/: CMakeLists.txt  agent.cpp  agent.h  escape_cat.cpp  escape_cat.h  main.cpp  utilities.h
escape_the_cat/imgui/: CMakeLists.txt  cmake_install.cmake  viewer.cpp
escapethecat/: CMakeLists.txt  README.md  catandmouse.cpp  catandmouse.h  entities.cpp  entities.h  main.cpp
escapethecat/tests/: CMakeLists.txt  test.cpp
fall-2022/: CMakeLists.txt  main.cpp
fall2022/: CMakeLists.txt  fall2022_main.cpp
grid/: CMakeLists.txt  bfs.h  constants.h  grid.h  predicates.h  viewer.h  voronoi.h
grid/impl/: compute_neighbours.h
grid/tests/: CMakeLists.txt  helpers.cpp  helpers.h  test_bfs.cpp  test_grid.cpp  test_voronoi.cpp
keepoffthegrass/: .gitignore  CMakeLists.txt
keepoffthegrass/src/: CMakeLists.txt  agent.cpp  agent.h  grid.cpp  grid.h  main.cpp  world.cpp  world.h  worldinfo.cpp  worldinfo.h
kog/: CMakeLists.txt  actions.h  agent.cpp  agent.h  agent_serialization.h  battlefront_info.h  battlefronts_info.h  boundary_info.h  direction_field.h  evaluation.h  game.cpp  game.h  main.cpp  player.h  territory_info.h  tile.h  tiles_info.h  units_info.h
kog/tests/: CMakeLists.txt  test_battlefronts.cpp
labyrinth/: labyrinth.cpp
mars-lander/: ep2.cpp
mayan-calculation/: main.py
scripts/: README.md  bundler.py
scripts/examples/bundler/: CMakeLists.txt  README.md
scripts/examples/bundler/subProject/: CMakeLists.txt  helpers.cpp  helpers.h  main.cpp  sources.txt
sok2/: .projectile  CMakeLists.txt  agent.h  fakejudge.h  io.h  local_viewer.h  referee.h  sok2-binary.cpp  sok2-local.cpp  sok2.cpp  types.h  utils.h  viewer.h
spreading_fire/: CMakeLists.txt  Description.org  agent.cpp  agent.h  cell.cpp  cell.h  distance.cpp  distance.h  enum_utils.h  game.cpp  game.h  main.cpp  point.h  sf.cpp
spreading_fire/tests/: CMakeLists.txt  debug_agent_distancemap.cc  test_agent_distancemap.cc  test_agent_randommove.cc  test_game.cc  test_play.cc
spreading_fire/tests/data/: input1.txt
spreading_fire/viewer/: CMakeLists.txt  tilemap.h  viewer.cpp  viewer.h
spring-challenge-2022/: .gitignore  CMakeLists.txt  agent.h  game.h  main.cpp  types.h
square-spiral/: main.py
sudoku/: CMakeLists.txt  sudoku.cpp
summer-2024/: .gitignore  CMakeLists.txt  agent.cpp  agent.h  main.cpp  olymbits.cpp  olymbits.h
summer-2024/instructions/: instructions.org
summer-2025/: main.py
the-fall/: ep2.py
thebridge/: CMakeLists.txt  agent.cpp  agent.h  game.cpp  game.h  ida_star.cpp  main.cpp  movecmp.h  search.cpp  search.h  tb.cpp  tb.h  thebridge.cpp  timeutil.h  ttable.cpp  ttable.h  types.h
thebridge/data/: test10.txt  test12.txt  test2.txt  test3.txt  test4.txt  test7.txt  test9.txt
thebridge/view/: road.cpp
thor/: thor.cpp
tower-dereference/: CMakeLists.txt  gridutils.cpp  gridutils.h  main.cpp  towerdef.cpp  towerdef.h
winter-2024/: main.py
